--- a/deno.json
+++ b/deno.json
@@ -8,6 +8,7 @@
     "start-watchless": "deno run --inspect -A dev.ts",
     "build": "deno run -A dev.ts build",
     "preview": "deno run -A main.ts",
+    "pup": "pup run -c ./pup.json",
     "update": "deno run -A -r https://fresh.deno.dev/update .",
     "db:dump": "deno run -A tasks/db_dump.ts",
     "db:restore": "deno run -A tasks/db_restore.ts",
@@ -20,6 +21,7 @@
     "/": "./",
     "./": "./",
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
+    "@pup/telemetry": "jsr:@pup/telemetry@^1.0.7",
     "@std/path": "jsr:@std/path@^1.0.8",
     "sharp": "npm:sharp@^0.34.0",
     "@img/sharp-wasm32": "npm:@img/sharp-wasm32@^0.34.0",
