--- a/deno.json
+++ b/deno.json
@@ -26,13 +26,13 @@
     "sharp": "npm:sharp@^0.34.0",
     "@img/sharp-wasm32": "npm:@img/sharp-wasm32@^0.34.0",
     "hash-wasm": "https://esm.sh/hash-wasm@4.12.0",
-    "preact": "https://esm.sh/preact@10.22.0",
-    "preact/": "https://esm.sh/preact@10.22.0/",
-    "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
-    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
-    "tailwindcss": "npm:tailwindcss@3.4.1",
-    "tailwindcss/": "npm:/tailwindcss@3.4.1/",
-    "tailwindcss/plugin": "npm:/tailwindcss@3.4.1/plugin.js",
+    "preact": "https://esm.sh/preact@10.26.5",
+    "preact/": "https://esm.sh/preact@10.26.5/",
+    "@preact/signals": "https://esm.sh/*@preact/signals@2.0.3",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.8.0",
+    "tailwindcss": "npm:tailwindcss@4.1.3",
+    "tailwindcss/plugin": "npm:/tailwindcss@4.1.3/plugin.js",
+    "@pakornv/fresh-plugin-tailwindcss": "jsr:@pakornv/fresh-plugin-tailwindcss@^1.0.2",
     "$std/": "https://deno.land/std@0.216.0/",
     "@kitsonk/kv-toolbox": "jsr:@kitsonk/kv-toolbox@^0.27.4",
     "hono": "https://esm.sh/hono@4.7.5",
@@ -46,6 +46,6 @@
     "deno-kv-insights/": "https://deno.land/x/deno_kv_insights@v0.8.4-beta/"
   },
   "compilerOptions": { "jsx": "precompile", "jsxImportSource": "preact" },
-  "nodeModulesDir": "none",
+  "nodeModulesDir": "auto",
   "unstable": ["net", "kv", "broadcast-channel"]
 }
