--- a/deno.json
+++ b/deno.json
@@ -22,6 +22,7 @@
     "./": "./",
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
     "@pup/telemetry": "jsr:@pup/telemetry@^1.0.7",
+    "@std/dotenv": "jsr:@std/dotenv@^0.225.3",
     "@std/path": "jsr:@std/path@^1.0.8",
     "@tailwindcss/typography": "npm:@tailwindcss/typography@^0.5.16",
     "sharp": "npm:sharp@^0.34.0",
@@ -34,7 +35,6 @@
     "tailwindcss": "npm:tailwindcss@4.1.3",
     "tailwindcss/plugin": "npm:/tailwindcss@4.1.3/plugin.js",
     "@pakornv/fresh-plugin-tailwindcss": "jsr:@pakornv/fresh-plugin-tailwindcss@^1.0.2",
-    "$std/": "https://deno.land/std@0.216.0/",
     "@kitsonk/kv-toolbox": "jsr:@kitsonk/kv-toolbox@^0.27.4",
     "hono": "https://esm.sh/hono@4.7.5",
     "@onjara/optic": "jsr:@onjara/optic@^2.0.3",
